chore: tweaks to the code

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -791,22 +791,11 @@
    "source": [
     "#### Prueba de hipótesis sobre la distribución del monto de los siniestros\n",
     "\n",
-    "<!-- @article{lilliefors1969kolmogorov,\n",
-    "  title={On the Kolmogorov-Smirnov test for the exponential distribution with mean unknown},\n",
-    "  author={Lilliefors, Hubert W},\n",
-    "  journal={Journal of the American Statistical Association},\n",
-    "  volume={64},\n",
-    "  number={325},\n",
-    "  pages={387--389},\n",
-    "  year={1969},\n",
-    "  publisher={Taylor \\& Francis}\n",
-    "} -->\n",
-    "\n",
-    "Realizaremos una prueba de hipótesis para ver si existe información estadística suficiente como para aseverar que el monto de los reclamos sigue una distribución exponencial $X \\sim \\text{Exp}(\\lambda = 32198.560688)$, realizaremos esta prueba con un nivel de significancia $\\alpha = 0.01$. Como método de prueba usaremos Lilliefors, propuesto en su artículo XXXX:\n",
+    "Realizaremos una prueba de hipótesis para ver si existe información estadística suficiente como para aseverar que el monto de los reclamos sigue una distribución exponencial $X \\sim \\text{Exp}(\\mu)$, realizaremos esta prueba con un nivel de significancia $\\alpha = 0.05$. Como método de prueba usaremos el de Lilliefors:\n",
     "\n",
     "$$\\begin{gather*}\n",
-    "    H_o: X \\sim \\text{Exp}(\\lambda) \\\\\n",
-    "    H_a: X \\not \\sim \\text{Exp}(\\lambda)\n",
+    "    H_o: X \\sim \\text{Exp}(\\mu) \\\\\n",
+    "    H_a: X \\not \\sim \\text{Exp}(\\mu)\n",
     "\\end{gather*}$$\n",
     "\n",
     "> Lilliefors, H. W. (1969). On the Kolmogorov-Smirnov test for the exponential distribution with mean unknown. Journal of the American Statistical Association, 64(325), 387-389."
@@ -836,7 +825,7 @@
    "source": [
     "El `p-value` obtenido no es menor al nivel de significancia que hemos establecido para nuestra prueba, por lo que hemos fallado el rechazo de la hipótesis nula. De ahora en adelante supondremos que los montos de los siniestros siguen una distribución exponencial.\n",
     "$$\\begin{equation}\n",
-    "    X \\sim \\text{Exp}(\\lambda)\n",
+    "    X \\sim \\text{Exp}(\\mu)\n",
     "\\end{equation}$$"
    ]
   },
@@ -873,8 +862,8 @@
    "source": [
     "Realizamos ahora una prueba de hipótesis con una signifcancia $\\alpha = 0.05$ para la media de los montos de los siniestros:\n",
     "$$\\begin{gather*}\n",
-    "    H_o: \\lambda = \\bar{\\lambda} \\\\\n",
-    "    H_a: \\lambda \\neq \\bar{\\lambda}\n",
+    "    H_o: \\mu = \\bar{\\mu} \\\\\n",
+    "    H_a: \\mu \\neq \\bar{\\mu}\n",
     "\\end{gather*}$$\n",
     "\n",
     "Como tenemos una muestra con más de 27,000 valores, podremos suponer que por el Teorema Central del Límite la media sigue una distribución normal; así que una prueba de hipótesis `t-student` bastará para comprobar nuestro supuesto."
