chore: tweaks on the notebook, new sample run

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1214,7 +1214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Probabilidad de ruina analítica. Fórmula de Pollaczcek-Khinchin\n",
+    "### Probabilidad de ruina analítica. Fórmula de Pollaczek-Khinchine\n",
     "\n",
     "$$\\begin{gather*}\n",
     "    u := \\text{Capital inicial} \\\\\n",
